--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     width="190" />
                 </div><br>
                 <div id="social-media">
-                  &nbsp;&nbsp;
+                  
                   <img src="assets/images/fb.png" alt="facebook" srcset="" width="30px" />
                   <img
                     src="assets/images/twitter.png"
@@ -287,18 +287,18 @@
                     <div class="col-md-4 ">
                       <div class="menu-footer-left-container lead">
                         <ul class="nav" id="menu-footer-left">
-                          <li class="nav-item"><a class="footer-link" style="color:white" href="index.html">Home</a></li>
-                          <li><a class="footer-link" style="color:white" href="contact.html">Contact Us</a></li>
-                          <li><a class="footer-link" style="color:white" href="watch.html">Watch</a></li>
+                          <li class="nav-item"><a class="nav-link footer-link" style="color:white" href="index.html">Home</a></li>
+                          <li><a class=" nav-link footer-link" style="color:white" href="contact.html">Contact Us</a></li>
+                          <li><a class="nav-link footer-link" style="color:white" href="watch.html">Watch</a></li>
                         </ul>
                       </div>
                     </div>
                     <div class="col-md-4 ">
                       <div class="menu-footer-right-container lead">
                         <ul class="nav" id="menu-footer-right">
-                          <li><a class="footer-link" style="color:white" href="about.html">About</a></li>
-                          <li><a class="footer-link" style="color:white" href="give.html">Give</a></li>
-                          <li><a class="footer-link" style="color:white" href="serve.html">Serve</a></li>
+                          <li><a class="nav-link footer-link" style="color:white" href="about.html">About</a></li>
+                          <li><a class="nav-link footer-link" style="color:white" href="give.html">Give</a></li>
+                          <li><a class="nav-link footer-link" style="color:white" href="serve.html">Serve</a></li>
                         </ul>
                       </div>
                     </div>
