More changes to the site

--- a/contact.html
+++ b/contact.html
@@ -205,7 +205,7 @@
               </div>
               <div class="col-md-3 ">
                 <div id="foot-nav"><h5>Our Mission</h5>
-                 To inspire everyone to become the man or woman God wants you to be.
+                  To be a church of Christ-like commitment, Christ-like compassion, and Christ-like character. 
                 </div>
               </div>
               <div class="col-md-3 col-sm-6 col-xs-2">
