--- a/watch.html
+++ b/watch.html
@@ -31,7 +31,7 @@
           <div class="col-md-3">
           
             <div id="foot-nav"><h5>Our Mission</h5>
-             <p class="footer-p">To inspire everyone to become the man or woman God wants you to be.</p>
+             <p class="footer-p">To be a church of Christ-like commitment, Christ-like compassion, and Christ-like character. </p>
             </div>
           </div>
           <!-- <div class="col-md-3 col-sm-6 col-xs-2">  -->
