--- a/give.html
+++ b/give.html
@@ -217,80 +217,80 @@
         </div>
 
         <div id="footer">
-        <div class="row">
-          <div class="col-md-3">
-            <div id="logo">
-              <img
-                src="assets/images/moWordLogo.png"
-                alt="Mt. Olive Baptist Churchs"
-                width="210"
-                class="responsive"
-              />
-            </div>
-            <div id="social-media">
-                <img src="assets/images/fb.png" alt="facebook" srcset="" width="30px" />
-                <img
-                  src="assets/images/twitter.png"
-                  alt="twitter"
-                  width="30px"
-                  srcset=""
-                />
-                <img
-                  src="assets/images/instagram.png"
-                  alt="instagram"
-                  srcset=""
-                  width="30px"
-                />
-              </div>
-          </div>
-          <div class="col-md-3 ">
-            <div id="foot-nav"><h5>Our Mission</h5>
-             To inspire everyone to become the man or woman God wants you to be.
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6 col-xs-2">
-            <div id="foot-nav" class="lead">
-              <h5>Contact Us</h5>
-              604 W Ball St, Plant City, FL 33563
-              <br />
-              Phone: (813)754-3834 <br />Email: info@mtolivebaptistchurch.net
-              <br />
-            </div>
-          </div>
-          <div class="col-md-3 ">
-            <div id="foot-nav">
-              <h5>Quick Links</h5>
-              <div class="row">
-                <div class="col-md-4 ">
-                  <div class="menu-footer-left-container lead">
-                    <ul class="nav menu" id="menu-footer-left">
-                      <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="index.html">Home</a></li>
-                      <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="contact.html">Contact Us</a></li>
-                      <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="watch.html">Watch</a></li>
-                    </ul>
-                  </div>
+            <div class="row">
+              <div class="col-md-3">
+                <div id="logo">
+                  <img
+                    src="assets/images/moWordLogo.png"
+                    alt="Mt. Olive Baptist Churchs"
+                    width="210"
+                    class="responsive"
+                  />
                 </div>
-                <div class="col-md-4 ">
-                  <div class="menu-footer-right-container lead">
-                    <ul class="nav menu" id="menu-footer-right">
-                      <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="about.html">About</a></li>
-                      <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="give.html">Give</a></li>
-                      <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="serve.html">Serve</a></li>
-                    </ul>
+                <div id="social-media">
+                    <img src="assets/images/fb.png" alt="facebook" srcset="" width="30px" />
+                    <img
+                      src="assets/images/twitter.png"
+                      alt="twitter"
+                      width="30px"
+                      srcset=""
+                    />
+                    <img
+                      src="assets/images/instagram.png"
+                      alt="instagram"
+                      srcset=""
+                      width="30px"
+                    />
                   </div>
+              </div>
+              <div class="col-md-3 ">
+                <div id="foot-nav"><h5>Our Mission</h5>
+                  To be a church of Christ-like commitment, Christ-like compassion, and Christ-like character. 
                 </div>
               </div>
-            </div>
-          </div>
-        </div>
-        
-        <div class="row">
-            <div class="col-md-12">
-              <div id="">
-                <br><p class="footer-p" style="text-align: center;font-size:10px;color:#ededed;">&copy; 2019 mtolivebaptistchurch.net</p>
+              <div class="col-md-3 col-sm-6 col-xs-2">
+                <div id="foot-nav" class="lead">
+                  <h5>Contact Us</h5>
+                  604 W Ball St, Plant City, FL 33563
+                  <br />
+                  Phone: (813)754-3834 <br />Email: info@mtolivebaptistchurch.net
+                  <br />
+                </div>
+              </div>
+              <div class="col-md-3 ">
+                <div id="foot-nav">
+                  <h5>Quick Links</h5>
+                  <div class="row">
+                    <div class="col-md-4 ">
+                      <div class="menu-footer-left-container lead">
+                        <ul class="nav menu" id="menu-footer-left">
+                          <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="index.html">Home</a></li>
+                          <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="contact.html">Contact Us</a></li>
+                          <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="watch.html">Watch</a></li>
+                        </ul>
+                      </div>
+                    </div>
+                    <div class="col-md-4 ">
+                      <div class="menu-footer-right-container lead">
+                        <ul class="nav menu" id="menu-footer-right">
+                          <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="about.html">About</a></li>
+                          <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="give.html">Give</a></li>
+                          <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="serve.html">Serve</a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
-        </div>
+            
+            <div class="row">
+                <div class="col-md-12">
+                  <div id="">
+                    <br><p class="footer-p" style="text-align: center;font-size:10px;color:#ededed;">&copy; 2019 mtolivebaptistchurch.net</p>
+                  </div>
+                </div>
+            </div>
         </div>
 
     </div>
