--- a/about.html
+++ b/about.html
@@ -1,76 +1,287 @@
-<div id="footer">
-    <div class="row">
-      <div class="col-md-3">
-        <div id="logo">
-          <img
-            src="assets/images/moWordLogo.png"
-            alt="Mt. Olive Baptist Churchs"
-            width="210"
-            class="responsive"
-          />
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" />
+  <!-- 
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    -->
+  <link rel="stylesheet" href="assets/css/style.css" />
+
+  <!------------------------------------------------------------------------------------------------------------------
+----  This group must stay in this order
+------------------------------------------------------------------------------------------------------------------->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
+    integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://bootswatch.com/4/united/bootstrap.min.css" />
+
+  <title>About</title>
+</head>
+
+<body>
+  <div class="container">
+
+    <div id="top">
+
+      <div class="row row-no-gutters">
+        <div class="col-xs-1 col-sm-4 col-lg-6  ">
+          <div id="logo">
+            <img src="assets/images/moWordLogo.png" alt="mtolivebaptistchurch.net" srcset="" width="378" height="102"
+              class="responsive" />
+          </div>
+
         </div>
-        <div id="social-media">
+        <div class="col-xs-11 col-sm-8 col-lg-6   ">
+          <div id="prayer-request">
+            <!--<i class="fas fa-pray" style="color:#f37521"></i>-->
+            <button id="pR" style="background-color: transparent; border: 1px solid #800020; color: #fff;"> <i
+                class="fas fa-pray fa-2x" style="color:#fff;"></i><span> Submit A Prayer Request</span> </button>
+          </div>
+
+          <!--  <div id="scripture">
+                  
+                  <ul id="script-list">Matthew 22:37-40
+                    <li>"Loving God" (Committment)</li>
+                       <li> "Loving Others" (Compassion)</li>
+                      <li>  "Loving Ourselves" (Character)</li>
+                  </ul>
+              </div>
+            -->
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-5"></div>
+        <div class="col-md-7">
+          <div id="nav">
+            <ul class="nav ">
+              <li class="nav-item">
+                <a class="nav-link active" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="contact.html">Contact Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="give.html">Give</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" href="watch.html">Watch</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="serve.html">Serve</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="div1" class="jumbotron" style=" background-color: #eff1f5;">
+
+    <!--<div id="div1" class="jumbotron" style=" background-color: #c5ccd8;">-->
+      <h1 class="display-5 info">Our Vision</h1>
+     <!--<hr class="my-4" width="20%" style="background-color:#404040;">--> 
+      <div id="vision">
+        <p style="text-align: justify;"> To be a church of Christ-like commitent, Christ-like compassion, and
+          Christ-like character.</p>
+        <h5 class="text-success" style="text-align: center;">Purpose Statement</h5>
+        <p class="text-success" style="text-align: center;">Matthew 22:37-40<br>
+          "Loving God: (Commitment)<br>
+          "Loving Others" (Compassion)<br>
+          "loving Ourselves" (Character)</p>
+      </div>
+      <div id="vision-pic" class="card border-secondary mb-3" style="max-width: 20rem;">
+
+        <img style="height: 100%; width: 100%; display: block; border: 2px solid rgb(31, 25, 25);"
+          src="assets/images/20191118_191536.jpg" alt="Church image">
+      </div>
+
+    </div>
+    <div id="div2" class="jumbotron" style=" background-color: #f2f2f21e;">
+      <h1 class="display-5 info">Our Pastor</h1>
+      <div id="pastor-bio">
+        <p class="" style="text-align: justify;">Antonio Wilkerson is the head pastor of Mt. Olive Baptist Church in
+          Plant City, Florida. Pastor Wilkerson
+          married his lovely wife, Shirley Ann on November 3 of 1990 and are the proud parents of 2 adult children:
+          Antonika and Antonio, Jr. with 5 grandchildren: Markayla, D’Quan, Talayjah, Arianna and Adian.<br><br>
+
+
+
+          As a native of Tampa, Florida, he is a product of the Hillsborough County School System, although graduating
+          from the Balboa High School in the Republic of Panama. When he received the call to ministry, he attended
+          Blessed Hope Bible College where he received his doctorate in Christian Theology with a concentration in
+          Christian Education. He also has graduated from Faith Bible Institute.<br><br>
+
+
+
+          On November 13, 2016, Pastor Wilkerson was given the honor and task of being the shepherd of Mt. Olive
+          Baptist
+          Church of Plant City. Prior to uniting with Mt. Olive Baptist Church, Pastor Wilkerson served at Macedonia
+          Missionary Baptist Church in Thonotosassa under Pastor W.L. Jackson at 1st Baptist Church of Progress
+          Village
+          in Tampa under the Dr. Sam Maxwell.<br><br>
+
+
+
+          “Ephesians 4:1 -3 which states (1)….I urge you to live a life worthy of the calling you have received. (2)
+          Be
+          completely humble and gentle; be patient bearing with one another in love. (3) Make every effort to keep the
+          unity of the Spirit through the bond of peace; are my favorite passages of scripture because it leads to
+          Christian-like Commitment, Christ-like compassion and Christ-like Character”.</p>
+
+
+      </div><br>
+      <div id="pastor-pic" class="card border-secondary mb-3" style="max-width: 20rem;">
+
+        <img style="height: 100%; width: 100%; display: block; border: 2px solid rgb(31, 25, 25);"
+          src="assets/images/Pastor/20180923_131555.jpg" alt="Card image">
+
+      </div>
+
+    </div>
+    <div id="div3" class="jumbotron" style=" background-color: #c5ccd8;">
+      <h1 class="display-5 info">First Lady</h1>
+      <div id="first-lady">
+        <p style="text-align: justify;">
+          The First Lady Bio
+        </p>
+      </div><br>
+      <div id="first-lady-pic" class="card border-secondary mb-3" style="max-width: 20rem;">
+
+        <img style="height: 100%; width: 100%; display: block; border: 2px solid rgb(31, 25, 25);"
+          src="assets/images/First Lady/20191006_130059_resized[1].jpg" alt="Church image">
+      </div>
+
+    </div>
+    <div id="div4" class="jumbotron" style=" background-color: #f8f5f5;"> The Four Spiritual Laws</div>
+
+
+
+
+
+
+
+    <div id="footer">
+      <div class="row">
+        <div class="col-md-3">
+          <div id="logo">
+            <img src="assets/images/moWordLogo.png" alt="Mt. Olive Baptist Churchs" width="250" class="responsive2" />
+          </div>
+          <div id="social-media">
             <img src="assets/images/fb.png" alt="facebook" srcset="" width="30px" />
-            <img
-              src="assets/images/twitter.png"
-              alt="twitter"
-              width="30px"
-              srcset=""
-            />
-            <img
-              src="assets/images/instagram.png"
-              alt="instagram"
-              srcset=""
-              width="30px"
-            />
+            <img src="assets/images/twitter.png" alt="twitter" width="30px" srcset="" />
+            <img src="assets/images/instagram.png" alt="instagram" srcset="" width="30px" />
           </div>
-      </div>
-      <div class="col-md-3 ">
-        <div id="foot-nav"><h5>Our Mission</h5>
-          To be a church of Christ-like commitment, Christ-like compassion, and Christ-like character. 
         </div>
-      </div>
-      <div class="col-md-3 col-sm-6 col-xs-2">
-        <div id="foot-nav" class="lead">
-          <h5>Contact Us</h5>
-          604 W Ball St, Plant City, FL 33563
-          <br />
-          Phone: (813)754-3834 <br />Email: info@mtolivebaptistchurch.net
-          <br />
+        <div class="col-md-3 ">
+          <div id="foot-nav">
+            <h5>Our Mission</h5>
+            To be a church of Christ-like commitment, Christ-like compassion, and Christ-like character.
+          </div>
         </div>
-      </div>
-      <div class="col-md-3 ">
-        <div id="foot-nav">
-          <h5>Quick Links</h5>
-          <div class="row">
-            <div class="col-md-4 ">
-              <div class="menu-footer-left-container lead">
-                <ul class="nav menu" id="menu-footer-left">
-                  <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="index.html">Home</a></li>
-                  <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="contact.html">Contact Us</a></li>
-                  <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="watch.html">Watch</a></li>
-                </ul>
+        <div class="col-md-3">
+          <div id="foot-nav" class="lead">
+            <h5>Contact Us</h5>
+            604 W Ball St, Plant City, FL 33563
+            <br />
+            Phone: (813)754-3834 <br />Email: info@mtolivebaptistchurch.net
+            <br />
+          </div>
+        </div>
+        <div class="col-md-3 ">
+          <div id="foot-nav">
+            <h5>Quick Links</h5>
+            <div class="row">
+              <div class="col-md-4 ">
+                <div class="menu-footer-left-container lead">
+                  <ul class="nav menu" id="menu-footer-left">
+                    <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="index.html">Home</a></li>
+                    <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="contact.html">Contact
+                        Us</a></li>
+                    <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="watch.html">Watch</a>
+                    </li>
+                  </ul>
+                </div>
               </div>
-            </div>
-            <div class="col-md-4 ">
-              <div class="menu-footer-right-container lead">
-                <ul class="nav menu" id="menu-footer-right">
-                  <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="about.html">About</a></li>
-                  <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="give.html">Give</a></li>
-                  <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="serve.html">Serve</a></li>
-                </ul>
+              <div class="col-md-4 ">
+                <div class="menu-footer-right-container lead">
+                  <ul class="nav menu" id="menu-footer-right">
+                    <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="about.html">About</a>
+                    </li>
+                    <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="give.html">Give</a></li>
+                    <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="serve.html">Serve</a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    
-    <div class="row">
-        <div class="col-md-12">
+
+      <div class="row">
+        <div class="col-lg-12">
           <div id="">
-            <br><p class="footer-p" style="text-align: center;font-size:10px;color:#ededed;">&copy; 2019 mtolivebaptistchurch.net</p>
+            <br>
+            <p class="footer-p" style="text-align: center;font-size:10px;color:#ededed;">&copy; 2019
+              mtolivebaptistchurch.net</p>
           </div>
         </div>
+      </div>
     </div>
-</div>
+
+    <div id="prayer-window">
+      <div class="title">
+
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        &nbsp; &nbsp;<h1>Prayer Request</h1>
+        <hr><br>
+        <form action="" id="form">
+          <div class="form-group">
+            <label for="exampleTextarea">You can use the box below to send the pastor your confidential prayer
+              request.</label>
+            <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="button" id="close" class="btn btn-secondary " data-dismiss="modal">Close</button>
+        </form>
+      </div>
+
+
+
+    </div>
+
+  </div>
+  <script src="assets/javascript/script.js"></script>
+</body>
+
+</html>
