--- a/give.html
+++ b/give.html
@@ -157,7 +157,7 @@
                     <i class="fas fa-envelope fa-5x" style="color:rgb(230, 190, 104)"></i><br><br>
                 </div>
                 <div class="col-md-3 col-sm-3 col-xs-3 info">
-                    <i class="far fa-calendar-alt fa-5x" style="color:rgb(230, 190, 104)"></i><br><br>
+                    <i class="far fa-calendar-alt fa-5x" style="color:#d19c3e"></i><br><br>
                 </div>
             </div>
             <div class="row" style="color:rgb(206, 145, 39)">
@@ -210,10 +210,7 @@
 
     <!--  <div id="section-3" style="background-color:rgb(230, 190, 104)"> -->
         <div id="section-3">
-        <h1>You Won!!</h1><br>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa laudantium, in odio error 
-          ab provident ipsam quidem, at obcaecati veritatis dolor rerum repudiandae possimus fuga eos, 
-          deserunt alias neque aut.</p>
+        
         </div>
 
         <div id="footer">
