--- a/about3.html
+++ b/about3.html
@@ -1,46 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
 
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" />
-  <!-- 
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro"
+      rel="stylesheet"
+    />
+    <!-- 
     <link rel="stylesheet" href="assets/css/reset.css" />
     -->
-  <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
 
-  <!------------------------------------------------------------------------------------------------------------------
+    <!------------------------------------------------------------------------------------------------------------------
 ----  This group must stay in this order
 ------------------------------------------------------------------------------------------------------------------->
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    
+   
+    
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" 
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" 
     crossorigin="anonymous"></script>
 
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
-    integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
-    crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://bootswatch.com/4/united/bootstrap.min.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
 
-  <title>Mt. Olive Baptist Church</title>
-</head>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" 
+    crossorigin="anonymous"></script>
+
+
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"
+      integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://bootswatch.com/4/united/bootstrap.min.css"
+    />
+
+    <title>Mt. Olive Baptist Church</title>
+  </head>
 
 <body>
   <div class="container">
@@ -104,115 +132,104 @@
     </div>
 
     <div id="div1">
-      <div class=".container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="jumbotron" style=" background-color: #eff1f5;">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="jumbotron" style=" background-color: #eff1f5;">
 
-              <!-- <div id="div1" class="jumbotron" style=" background-color: #c5ccd8;"> -->
-              <h1 class="display-5 info">Our Vision</h1>
-              <!--<hr class="my-4" width="20%" style="background-color:#404040;">-->
-              <div id="vision">
-                <p class="" style="text-align: justify;"> To be a church of Christ-like commitent, Christ-like
-                  compassion, and
-                  Christ-like character.</p>
-                <h5 class="text-success" style="text-align: center;">Purpose Statement</h5>
-                <p class="text-success" style="text-align: center;">Matthew 22:37-40<br>
-                  "Loving God: (Commitment)<br>
-                  "Loving Others" (Compassion)<br>
-                  "loving Ourselves" (Character)</p>
-              </div>
-              <div id="vision-pic" class="card border-secondary mb-3" style="max-width: 20rem;">
+            <!-- <div id="div1" class="jumbotron" style=" background-color: #c5ccd8;"> -->
+            <h1 class="display-5 info">Our Vision</h1>
+            <!--<hr class="my-4" width="20%" style="background-color:#404040;">-->
+            <div id="vision">
+              <p style="text-align: justify;"> To be a church of Christ-like commitent, Christ-like compassion, and
+                Christ-like character.</p>
+              <h5 class="text-success" style="text-align: center;">Purpose Statement</h5>
+              <p class="text-success" style="text-align: center;">Matthew 22:37-40<br>
+                "Loving God: (Commitment)<br>
+                "Loving Others" (Compassion)<br>
+                "loving Ourselves" (Character)</p>
+            </div>
+            <div id="vision-pic" class="card border-secondary mb-3" style="max-width: 20rem;">
 
-                <img style="height: 100%; width: 100%; display: block; border: 2px solid rgb(31, 25, 25);"
-                  src="assets/images/20191118_191536.jpg" alt="Church image" class="responsive">
-              </div>
+              <img style="height: 100%; width: 100%; display: block; border: 2px solid rgb(31, 25, 25);"
+                src="assets/images/20191118_191536.jpg" alt="Church image">
             </div>
           </div>
         </div>
       </div>
     </div>
     <div id="div2">
-      <div class=".container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="jumbotron" style=" background-color: #f2f2f21e; height:800px;">
-              <h1 class="display-5 info">Our Pastor</h1>
-              <div id="pastor-bio">
-                <p class="" style="text-align: justify;">Antonio Wilkerson is the head pastor of Mt. Olive Baptist
-                  Church
-                  in
-                  Plant City, Florida. Pastor Wilkerson
-                  married his lovely wife, Shirley Ann on November 3 of 1990 and are the proud parents of 2 adult
-                  children:
-                  Antonika and Antonio, Jr. with 5 grandchildren: Markayla, D’Quan, Talayjah, Arianna and Adian.<br><br>
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="jumbotron" style=" background-color: #f2f2f21e; height:800px;">
+            <h1 class="display-5 info">Our Pastor</h1>
+            <div id="pastor-bio">
+              <p class="lead" style="text-align: justify;">Antonio Wilkerson is the head pastor of Mt. Olive Baptist Church
+                in
+                Plant City, Florida. Pastor Wilkerson
+                married his lovely wife, Shirley Ann on November 3 of 1990 and are the proud parents of 2 adult
+                children:
+                Antonika and Antonio, Jr. with 5 grandchildren: Markayla, D’Quan, Talayjah, Arianna and Adian.<br><br>
 
 
 
-                  As a native of Tampa, Florida, he is a product of the Hillsborough County School System, although
-                  graduating
-                  from the Balboa High School in the Republic of Panama. When he received the call to ministry, he
-                  attended
-                  Blessed Hope Bible College where he received his doctorate in Christian Theology with a concentration
-                  in
-                  Christian Education. He also has graduated from Faith Bible Institute.<br><br>
+                As a native of Tampa, Florida, he is a product of the Hillsborough County School System, although
+                graduating
+                from the Balboa High School in the Republic of Panama. When he received the call to ministry, he
+                attended
+                Blessed Hope Bible College where he received his doctorate in Christian Theology with a concentration in
+                Christian Education. He also has graduated from Faith Bible Institute.<br><br>
 
 
 
-                  On November 13, 2016, Pastor Wilkerson was given the honor and task of being the shepherd of Mt. Olive
-                  Baptist
-                  Church of Plant City. Prior to uniting with Mt. Olive Baptist Church, Pastor Wilkerson served at
-                  Macedonia
-                  Missionary Baptist Church in Thonotosassa under Pastor W.L. Jackson at 1st Baptist Church of Progress
-                  Village
-                  in Tampa under the Dr. Sam Maxwell.<br><br>
+                On November 13, 2016, Pastor Wilkerson was given the honor and task of being the shepherd of Mt. Olive
+                Baptist
+                Church of Plant City. Prior to uniting with Mt. Olive Baptist Church, Pastor Wilkerson served at
+                Macedonia
+                Missionary Baptist Church in Thonotosassa under Pastor W.L. Jackson at 1st Baptist Church of Progress
+                Village
+                in Tampa under the Dr. Sam Maxwell.<br><br>
 
 
 
-                  “Ephesians 4:1 -3 which states (1)….I urge you to live a life worthy of the calling you have received.
-                  (2)
-                  Be
-                  completely humble and gentle; be patient bearing with one another in love. (3) Make every effort to
-                  keep
-                  the
-                  unity of the Spirit through the bond of peace; are my favorite passages of scripture because it leads
-                  to
-                  Christian-like Commitment, Christ-like compassion and Christ-like Character”.</p>
+                “Ephesians 4:1 -3 which states (1)….I urge you to live a life worthy of the calling you have received.
+                (2)
+                Be
+                completely humble and gentle; be patient bearing with one another in love. (3) Make every effort to keep
+                the
+                unity of the Spirit through the bond of peace; are my favorite passages of scripture because it leads to
+                Christian-like Commitment, Christ-like compassion and Christ-like Character”.</p>
 
 
-              </div><br>
-              <div id="pastor-pic" class="card border-secondary mb-3" style="max-width: 20rem;">
+            </div><br>
+            <div id="pastor-pic" class="card border-secondary mb-3" style="max-width: 20rem;">
 
-                <img style="height: 100%; width: 100%; display: block; border: 2px solid rgb(31, 25, 25);"
-                  src="assets/images/Pastor/20180923_131555.jpg" alt="Card image">
-              </div>
+              <img style="height: 100%; width: 100%; display: block; border: 2px solid rgb(31, 25, 25);"
+                src="assets/images/Pastor/20180923_131555.jpg" alt="Card image">
             </div>
           </div>
         </div>
       </div>
     </div>
+   
+    <div id="div3">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="jumbotron" style=" background-color: #45608d;">
+            <h1 class="display-5 info">First Lady</h1>
+            <div id="first-lady">
+              <p class="lead" style="text-align: justify;"> The only difference I can see is there
+                wasn't anything written here yet.  </p>
 
-    <!-- <div id="div3">
-      <div class="">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="jumbotron" style=" background-color: #45608d; height: 600px;">
-              <h1 class="display-5 info">First Lady</h1>
-              <div id="first-lady">
-                <p class="lead" style="text-align: justify;"> The only difference I can see is there
-                  wasn't anything written here yet. </p>
+            </div><br>
+            <div id="first-lady-pic" class="card border-secondary mb-3" style="max-width: 20rem;">
 
-              </div><br>
-              <div id="first-lady-pic" class="card border-secondary mb-3" style="max-width: 20rem;">
-
-                <img style="height: 100%; width: 100%; display: block; border: 2px solid rgb(31, 25, 25);"
-                  src="assets/images/First Lady/20191006_130059_resized[1].jpg" alt="Card image">
-              </div>
+              <img style="height: 100%; width: 100%; display: block; border: 2px solid rgb(31, 25, 25);"
+                src="assets/images/First Lady/20191006_130059_resized[1].jpg" alt="Card image">
             </div>
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
     <div id="div4">
       <div class="row">
         <div class="col-lg-12">
