--- a/give.html
+++ b/give.html
@@ -225,8 +225,8 @@
                   />
                 </div>
                 <div id="social-media">
-                    <img src="assets/images/fb.png" alt="facebook" srcset="" width="30px" />
-                    <img
+                  <a href="https://www.facebook.com/pcmtolivebaptist" target="_blank"><img src="assets/images/fb.png" alt="facebook" srcset="" width="30px" /></a>
+                    <!-- <img
                       src="assets/images/twitter.png"
                       alt="twitter"
                       width="30px"
@@ -237,7 +237,7 @@
                       alt="instagram"
                       srcset=""
                       width="30px"
-                    />
+                    /> -->
                   </div>
               </div>
               <div class="col-md-3 ">
@@ -284,7 +284,7 @@
             <div class="row">
                 <div class="col-md-12">
                   <div id="">
-                    <br><p class="footer-p" style="text-align: center;font-size:10px;color:#ededed;">&copy; 2019 mtolivebaptistchurch.net</p>
+                    <br><p class="footer-p" style="text-align: center;font-size:10px;color:#ededed;">&copy; 2020 mtolivebaptistchurch.net</p>
                   </div>
                 </div>
             </div>
