--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
               />
             </div>
             <div id="social-media">
-                <img src="assets/images/fb.png" alt="facebook" srcset="" width="30px" />
-                <img src="assets/images/twitter.png"  alt="twitter" width="30px" srcset=""/>
-                <img src="assets/images/instagram.png"  alt="instagram" srcset=""  width="30px"/>
+               <a href="https://www.facebook.com/pcmtolivebaptist" target="_blank"><img src="assets/images/fb.png" alt="facebook" srcset="" width="30px" /></a> 
+                <!-- <img src="assets/images/twitter.png"  alt="twitter" width="30px" srcset=""/>
+                <img src="assets/images/instagram.png"  alt="instagram" srcset=""  width="30px"/> -->
               </div>
           </div>
           <div class="col-md-3 ">
@@ -272,7 +272,7 @@
                     <ul class="nav menu" id="menu-footer-left">
                       <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="index.html">Home</a></li>
                       <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="contact.html">Contact Us</a></li>
-                      <li><a class="nav-link menu-link" style="font-size:15px;color:white" href="watch.html">Watch</a></li>
+                      <li><a class="nav-link menu-link disabled" style="font-size:15px;color:white" href="watch.html">Watch</a></li>
                     </ul>
                   </div>
                 </div>
@@ -293,7 +293,7 @@
         <div class="row">
             <div class="col-lg-12">
               <div id="">
-                <br><p class="footer-p" style="text-align: center;font-size:10px;color:#ededed;">&copy; 2019 mtolivebaptistchurch.net</p>
+                <br><p class="footer-p" style="text-align: center;font-size:10px;color:#ededed;">&copy; 2020 mtolivebaptistchurch.net</p>
               </div>
             </div>
         </div>
