--- a/about.html
+++ b/about.html
@@ -235,9 +235,9 @@
             <img src="assets/images/moWordLogo.png" alt="Mt. Olive Baptist Churchs" width="250" class="responsive2" />
           </div>
           <div id="social-media">
-            <img src="assets/images/fb.png" alt="facebook" srcset="" width="30px" />
-            <img src="assets/images/twitter.png" alt="twitter" width="30px" srcset="" />
-            <img src="assets/images/instagram.png" alt="instagram" srcset="" width="30px" />
+            <a href="https://www.facebook.com/pcmtolivebaptist" target="_blank"> <img src="assets/images/fb.png" alt="facebook" srcset="" width="30px" /></a>
+            <!-- <img src="assets/images/twitter.png" alt="twitter" width="30px" srcset="" />
+            <img src="assets/images/instagram.png" alt="instagram" srcset="" width="30px" /> -->
           </div>
         </div>
         <div class="col-md-3 ">
@@ -292,7 +292,7 @@
         <div class="col-lg-12">
           <div id="">
             <br>
-            <p class="footer-p" style="text-align: center;font-size:10px;color:#ededed;">&copy; 2019
+            <p class="footer-p" style="text-align: center;font-size:10px;color:#ededed;">&copy; 2020
               mtolivebaptistchurch.net</p>
           </div>
         </div>
