more changes to php files

--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@
           <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-              <form id="contactForm" name="contactForm" action="" method="POST">
+              <form id="contactForm" name="contactForm" action="https://www.mtolivebaptistchurch.net/assets/PHP/contactForm.php" method="POST">
                 <fieldset>
 
 
@@ -196,7 +196,7 @@
                       <textarea style="background-color:#e9f1f162" class="form-control" id="messageTextarea"
                         rows="3" name="message"></textarea>
                       <br>
-                      <div id="mail-status"></div>
+                      <div id="mail-status"></div><br>
                       <!-- 
                                                   <button style="background-color:#2196f3" type="submit" class="btn btn-primary">Submit</button>
                                                   -->
