made changes to php script

--- a/contact.html
+++ b/contact.html
@@ -167,7 +167,7 @@
                   <div class="form-group row">
                     <label for="nameInput" class="col-sm-2 col-form-label lead" style="font-size:18px">Your Name</label>
                     <div class="col-sm-10">
-                      <input style="background-color: #e9f1f162" type="name" class="form-control" id="nameInput"
+                      <input style="background-color: #e9f1f162, color:#f37521" type="name" class="form-control" id="nameInput"
                         aria-describedby="nameHelp" placeholder="" name="name">
                     </div>
                   </div>
