--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://bootswatch.com/4/united/bootstrap.min.css" />
 
-  <title>Mt. Olive Baptist Church</title>
+  <title>About -Mt. Olive Baptist Church</title>
 </head>
 
 <body>
@@ -103,14 +103,15 @@
       </div>
     </div>
 
-    <div id="div1">
+    <div id="div1" class="alert alert-dismissible alert-light">
       <div class=".container">
         <div class="row">
           <div class="col-lg-12">
-            <div class="jumbotron" style=" background-color: #eff1f5;">
+            <div >
+            <!-- <div class="jumbotron" style=" background-color: #eff1f5;" class="alert alert-dismissible alert-secondary"> -->
 
               <!-- <div id="div1" class="jumbotron" style=" background-color: #c5ccd8;"> -->
-              <h1 class="display-5 info">Our Vision</h1>
+              <h1 class="display-5 info" style="color: black;">Our Vision</h1>
               <!--<hr class="my-4" width="20%" style="background-color:#404040;">-->
               <div id="vision">
                 <p class="" style="text-align: justify;"> To be a church of Christ-like commitent, Christ-like
@@ -213,10 +214,11 @@
         </div>
       </div>
     </div> -->
-    <div id="div4">
+    <div id="div4" class="alert alert-dismissible alert-primary">
       <div class="row">
         <div class="col-lg-12">
-          <div class="jumbotron" style=" background-color: #f8f5f5;"> The Four Spiritual Laws
+          <!-- <div class="jumbotron"  class="alert alert-dismissible alert-primary"> The Four Spiritual Laws -->
+          <div> The Four Spiritual Laws
           </div>
         </div>
       </div>
