--- a/serve.html
+++ b/serve.html
@@ -137,6 +137,10 @@
         </div>
       </div>
     </div>
+    <div id="serve-1">
+      <!-- <img src="assets/images/Choir/20191013_214935_resized[2].jpg" alt="" srcset=""> -->
+      <h1>Join A Ministry</h1>
+    </div>
 
     <div id="footer">
       <div class="row">
